--- a/app/templates/items_detail.html
+++ b/app/templates/items_detail.html
@@ -265,7 +265,8 @@
           <div class="hr"></div>
 
           <div class="btns-row">
-            <a href="/u/{{ owner.id }}" class="btnx btnx-ghost">👤 الملف العام</a>
+            <a href="/users/{{ owner.id }}" class="btnx btnx-ghost">👤 الملف العام</a>
+
             <a class="btnx btnx-primary" href="/messages/start?user_id={{ owner.id }}&item_id={{ item.id }}">راسل المالك</a>
           </div>
         {% else %}
